[package]
name = "pdb-dl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdb-dl"
path = "src/main.rs"
required-features = ["async"]

[lib]
name = "pdb_dl"
path = "src/lib.rs"

[features]
default = ["async"]
all = ["async", "blocking"]
async = ["tokio"]
blocking = ["reqwest/blocking"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
goblin = "0.8"
hex = "0.4"
reqwest = { version = "0.12" }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
